# snake

./: CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
.gitignore/: .gitignore
base/snakeApp/: VirtualTerminalAddition.reg  snakeApp.sln  snakeCoordCalc.xlsx
base/snakeApp/snakeApp/: doublyLinkedList.c  doublyLinkedList.h  print.c  print.h  snakeApp.c  snakeApp.cpp  snakeApp.depend  snakeApp.vcxproj  snakeApp.vcxproj.filters  snakeSrc.c  snakeSrc.h
base/snakeApp/snakeApp/Debug/: doublylinkedlist.obj.enc  snakeapp.obj.enc  snakesrc.obj.enc  vc142.idb
base/snakeApp/snakeApp/Debug/snakeApp.tlog/: CL.12392.write.1.tlog  CL.13088.write.1.tlog  CL.14792.write.1.tlog  CL.15816.write.1.tlog  CL.20864.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  snakeApp.lastbuildstate
base/snakeApp/src/: doublyLinkedList.c  doublyLinkedList.h  snakeApp.c  snakeSrc.c  snakeSrc.h
